--- a/index.html
+++ b/index.html
@@ -1,13 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студия</title>
 </head>
 <body>
-    <H1>Доброго вечора!</H1>
-    <h2>Ми з України</h2>
+    <header>
+        <a href="">WebStudio</a>
+        <nav>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+
+
+    </header>
+    <main>
+        <section>
+          <h1>Эффективные решения для вашего бизнеса</h1>  
+          <button type="button"> Заказать услугу </button>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li> <img src="images/box-1-2.jpg" alt="процесс написания кода" width="370" height="294"></li>
+                <li> <img src="images/box-2-2.jpg" alt="работа с макетами" width="370" height="294"></li>
+                <li> <img src="images/box-3-2.jpg" alt="подбор цвета" width="370" height="294"></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><img src="/images/img-1.jpg" alt="бородатый мужчина в очках и коричневой рубашке " width="270" height="260">
+                <p>Игорь Демьяненко</p>
+                <p lang="en">Product Designer</p></li>
+                <li><img src="/images/img-2.jpg" alt="блондинка в очках и черном пиджаке улыбается " width="270" height="260">
+                <p>Ольга Репина</p>
+                <p lang="en">Frontend Developer</p></li>
+                <li><img src="/images/img-3.jpg" alt="мужчина в голубой рубашке улыбается " width="270" height="260">
+                <p>Николай Тарасов</p>
+                <p lang="en">Marketing</p></li>
+                <li><img src="/images/img-4.jpg" alt="бородатый мужчина в очках и черной футболке улыбается " width="270" height="260">
+                <p>Михаил Ермаков</p>
+                <p lang="en">UI Designer</p></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="">WebStudio</a>
+        <address>
+         <p>г. Киев, пр-т Леси Украинки, 26</p> 
+         <a href="mailto:info@devstudio.com">info@devstudio.com</a> 
+         <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+        </address>
+    </footer>
 </body>
 </html>
