--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
-                <li><img src="/images/img-1.jpg" alt="бородатый мужчина в очках и коричневой рубашке " width="270" height="260">
+                <li><img src="images/img-1.jpg" alt="бородатый мужчина в очках и коричневой рубашке " width="270" height="260">
                 <p>Игорь Демьяненко</p>
                 <p lang="en">Product Designer</p></li>
-                <li><img src="/images/img-2.jpg" alt="блондинка в очках и черном пиджаке улыбается " width="270" height="260">
+                <li><img src="images/img-2.jpg" alt="блондинка в очках и черном пиджаке улыбается " width="270" height="260">
                 <p>Ольга Репина</p>
                 <p lang="en">Frontend Developer</p></li>
-                <li><img src="/images/img-3.jpg" alt="мужчина в голубой рубашке улыбается " width="270" height="260">
+                <li><img src="images/img-3.jpg" alt="мужчина в голубой рубашке улыбается " width="270" height="260">
                 <p>Николай Тарасов</p>
                 <p lang="en">Marketing</p></li>
-                <li><img src="/images/img-4.jpg" alt="бородатый мужчина в очках и черной футболке улыбается " width="270" height="260">
+                <li><img src="images/img-4.jpg" alt="бородатый мужчина в очках и черной футболке улыбается " width="270" height="260">
                 <p>Михаил Ермаков</p>
                 <p lang="en">UI Designer</p></li>
             </ul>
